<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Lectura contadores de agua</string>
    <string name="btncalle">Calle</string>
    <string name="btntitular">Titular</string>
    <string name="btncontador">Contador</string>
    <string name="btncontrato">Contrato</string>
    <string name="txtbusqueda">.... buscar</string>
    <string name="titulo">Lectura contadores</string>
    <string name="btnNewReading">Aceptar Lectura</string>
    <string name="menu_filtro">Filtrar</string>
    <string name="filtrar">Filtrar</string>
    <string name="supply_title_activity">Acometidas</string>
    <string name="cargar_datos">Cargar datos</string>
    <string name="btn_get_supply_points">Obtener acometidas</string>
    <string name="msg_connectdb_error">No se ha podido conectar al servidor de datos</string>
    <string name="city">Municipio</string>
    <string name="book">Libro</string>
    <string name="street">Calle</string>
    <string name="supply_point">Acometida</string>
    <string name="mnu_general_filter">Filtrar</string>
    <string name="txtGetSupplyPoint">Obtener acometidas</string>
    <string name="txtSendReading">Enviar lecturas</string>
    <string name="txtSendAttachment">Enviar adjuntos</string>
    <string name="txtSetting">Opciones</string>
    <string name="mnu_options">Opciones</string>
    <string name="menu_general_filter_list">Aceptar selección</string>
    <string name="mnu_filter_accept">Aceptar selección</string>
    <string name="mnu_option_launch">Opciones</string>
    <string name="mnu_all_supply_points">Todos</string>
    <string name="mnu_accept">Aceptar</string>
    <string name="mnu_filter_gps">GPS</string>
    <string name="lbServerAddress">Servidor</string>
    <string name="lbServerPort">Puerto</string>
    <string name="lbServerUser">Usuario</string>
    <string name="lbServerPassword">Contraseña</string>
    <string name="lbServerDatabase">Base de datos</string>
    <string name="mnu_show_gallery">Mostrar galería</string>
    <string name="mnu_take_photo">Tomar foto</string>
    <string name="mnu_show_map">Mostrar mapa</string>
    <string name="mnu_save_localization">Guardar posición GPS</string>
    <string name="mnu_show_attachment">Mostrar adjuntos</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_import_selection_list">ImportSelectionList</string>
    <string name="noImages">No hay imagenes disponibles</string>
    <string name="lbUser">Usuario</string>
    <string name="lbPassword">Contraseña</string>
    <string name="txtUserHint">Escriba usuario</string>
    <string name="btnLogin">Login</string>
    <string name="txtPassword">Contraseña</string>
    <string name="mnu_login">Login</string>
    <string name="msg_no_parameters_openERP_connection">No hay parámetros de conexión configurados</string>
    <string name="mnu_syncUsers">Sincronizar usuarios</string>
    <string name="msg_import_users_ok">Usuarios sincronizados</string>
    <string name="msg_yes">Si</string>
    <string name="msg_cancel">Cancelado</string>
    <string name="mnu_plus">Añadir</string>
    <string name="import_selection_dialog">Importación de acometidas</string>
    <string name="import_selection_dialog_title">Titulo </string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="msg_reading_pending">Tiene lecturas sin enviar</string>
    <string name="txtEmptySupplyPoints">Eliminar datos</string>
    <string name="msg_empty_tables">Se han eliminado los datos</string>
    <string name="dialog_options_getsupply_title">Obtener acometidas</string>
    <string name="dialog_options_getsupply_message">Debe de enviar primero las lecturas pendientes</string>
    <string name="btnEmptyData">Eliminar datos</string>
    <string name="msg_procesing">Procesando ...</string>
    <string name="mnu_manual_issue">Incidencia</string>
    <string name="msg_select_issue_detail">Debe seleccionar un motivo</string>
    <string name="msg_select_issue_detail_title">Motivo de incidencia</string>
    <string name="mnu_delete_reading">Borrar lectura</string>
    <string name="msg_try_issue_alert">Vuelva a introducir el dato</string>
    <string name="msg_tmp_import_selection_no_elements">Cree algún filtro para proceder</string>
    <string name="msg_GeneralFilterList_no_elements">Seleccione algún elemento</string>
    <string name="GeneralFilterList_search_hint">Escriba aquí para buscar ...</string>
    <string name="chkIssueReported">He informado al abonado</string>
    <string name="txtIssueComment">Escriba aquí un comentario ...</string>
</resources>