<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layGetSupplyPoint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="10"
        android:background="@color/cream"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_receive_reading" />

        <TextView
            android:id="@+id/txtGetSupplyPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@color/green"
            android:gravity="center"
            android:text="@string/txtGetSupplyPoint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/laySendSupplyPoint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@color/cream"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_send_reading" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtSendReading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/laySendAttachment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="10"
        android:background="@color/cream"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_attach" />

        <TextView
            android:id="@+id/txtSendReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtSendAttachment"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/laySetting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@color/cream"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_options" />

        <TextView
            android:id="@+id/txtSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txtSetting"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>