<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layGeneralFilter"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/cream"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView06"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/layGeneralFilterCity"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_city" />

            <TextView
                android:id="@+id/txtFilterCity"
                style="@style/labelGeneralFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imgClearCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:src="@drawable/content_discard" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView04"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/book"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/layGeneralFilterBook"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_book" />

            <TextView
                android:id="@+id/txtFilterBook"
                style="@style/labelGeneralFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imgClearBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:src="@drawable/content_discard" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/layGeneralFilterStreet"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_street" />

            <TextView
                android:id="@+id/txtFilterStreet"
                style="@style/labelGeneralFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imgClearStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:src="@drawable/content_discard" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/supply_point"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/layGeneralFilterSupply"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_meter" />

            <TextView
                android:id="@+id/txtFilterSupplyPoint"
                style="@style/labelGeneralFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="TextView" />

            <ImageView
                android:id="@+id/imgClearSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:src="@drawable/content_discard" />

        </LinearLayout>

</LinearLayout>

    

    

</LinearLayout>